--- a/package.json
+++ b/package.json
@@ -17,20 +17,21 @@
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "@hapi/glue": "^7.0.0",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "17.x.x",
     "@hapi/vision": "^6.0.0",
+    "confidence": "4.x.x",
+    "dotenv": "8.x.x",
     "handlebars": "^4.7.6",
     "hapi-swagger": "^13.0.2",
     "haute-couture": "3.x.x",
+    "hoek": "^6.1.3",
     "knex": "^0.21.2",
     "objection": "^2.2.1",
     "pg": "^8.3.0",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
-    "@hapi/glue": "^7.0.0",
-    "dotenv": "8.x.x",
-    "confidence": "4.x.x",
     "toys": "2.x.x"
   },
   "devDependencies": {
