--- a/package.json
+++ b/package.json
@@ -32,7 +32,8 @@
     "pg": "^8.3.0",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
-    "toys": "2.x.x"
+    "toys": "2.x.x",
+    "underscore": "^1.10.2"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
