--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "sansaar",
   "version": "1.0.0",
+  "name": "sansaar",
   "description": "",
   "author": "",
   "license": "ISC",
@@ -10,25 +10,30 @@
     "test": "test"
   },
   "scripts": {
-    "start": "node server",
+    "start": "nodemon --watch lib --watch server server",
     "test": "lab -a @hapi/code -L",
     "lint": "eslint lib server",
     "lint:fix": "eslint lib server --fix"
   },
   "dependencies": {
     "@hapi/boom": "9.x.x",
+    "@hapi/bounce": "^2.0.0",
     "@hapi/glue": "^7.0.0",
+    "@hapi/hapi": "19.x.x",
     "@hapi/inert": "^6.0.1",
     "@hapi/joi": "17.x.x",
     "@hapi/vision": "^6.0.0",
     "confidence": "4.x.x",
     "dotenv": "8.x.x",
+    "google-auth-library": "^6.0.6",
     "handlebars": "^4.7.6",
+    "hapi-auth-jwt2": "^10.1.0",
     "hapi-swagger": "^13.0.2",
     "haute-couture": "3.x.x",
     "hoek": "^6.1.3",
     "knex": "^0.21.2",
     "objection": "^2.2.1",
+    "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
@@ -39,7 +44,6 @@
     "@hapi/code": "8.x.x",
     "@hapi/eslint-config-hapi": "13.x.x",
     "@hapi/eslint-plugin-hapi": "4.x.x",
-    "@hapi/hapi": "19.x.x",
     "@hapi/lab": "22.x.x",
     "babel-eslint": "10.x.x",
     "eslint": "^7.5.0",
@@ -49,6 +53,7 @@
     "eslint-plugin-prettier": "^3.1.4",
     "hpal": "2.x.x",
     "hpal-debug": "1.x.x",
+    "nodemon": "^2.0.4",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0"
   },
