--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "hapi-swagger": "^13.0.2",
     "haute-couture": "3.x.x",
     "hoek": "^6.1.3",
+    "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
