--- a/package.json
+++ b/package.json
@@ -34,14 +34,14 @@
     "hoek": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "lodash": "^4.17.20",
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
-    "toys": "2.x.x",
-    "underscore": "^1.10.2"
-  },
+    "toys": "2.x.x"
+   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
     "@hapi/eslint-config-hapi": "13.x.x",
