--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/joi": "17.x.x",
     "@hapi/vision": "^6.0.0",
     "avocat": "^2.0.0",
+    "axios": "^0.20.0",
     "confidence": "4.x.x",
     "crypto": "^1.0.1",
     "dotenv": "8.x.x",
