--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "hoek": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "lodash": "^4.17.20",
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
