--- a/server/sample.env
+++ b/server/sample.env
@@ -6,4 +6,5 @@ DB_PASS = "hello"
 
 ## Authentication
 AUTH_JWT_SECRET = "some-difficult-guess-secret"
-GOOGLE_AUTH_CLIENT_ID = "add-google-auth-client-id-here"
+GOOGLE_AUTH_CLIENT_ID_WEB = "add-google-auth-client-id-here"
+GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
