--- a/package.json
+++ b/package.json
@@ -25,6 +25,8 @@
     "@hapi/vision": "^6.0.0",
     "avocat": "^2.0.0",
     "axios": "^0.20.0",
+    "babel-cli": "^6.26.0",
+    "babel-preset-es2015": "^6.24.1",
     "confidence": "4.x.x",
     "crypto": "^1.0.1",
     "dotenv": "8.x.x",
