chat_id and chat_password entry added in user table for new user

--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-es2015": "^6.24.1",
     "confidence": "4.x.x",
     "crypto": "^1.0.1",
+    "crypto-random-string": "^3.3.0",
     "dotenv": "8.x.x",
     "fs-extra": "^9.0.1",
     "google-auth-library": "^6.0.6",
@@ -41,6 +42,7 @@
     "knex": "^0.21.2",
     "lodash": "^4.17.20",
     "marked": "^1.1.1",
+    "matrix-bot-sdk": "^0.5.7",
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
