--- a/server/sample.env
+++ b/server/sample.env
@@ -8,3 +8,8 @@ DB_PASS = "hello"
 AUTH_JWT_SECRET = "some-difficult-guess-secret"
 GOOGLE_AUTH_CLIENT_ID_WEB = "add-google-auth-client-id-here"
 GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
+
+
+## CHAT
+CHAT_ADMIN_ACCESS_TOKEN = "matrix-admin-access-token"
+HOMESERVER_URL = "matrix-home-server"
