--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
+    "random-animal-name-generator": "^0.1.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
     "toys": "2.x.x"
