--- a/server/sample.env
+++ b/server/sample.env
@@ -5,6 +5,7 @@ DB_USER = "postgres"
 DB_PASS = "hello"
 
 ## Authentication
+CHAT_ACCESS_TOKEN = "access-token-from-matrix-server"
 AUTH_JWT_SECRET = "some-difficult-guess-secret"
 GOOGLE_AUTH_CLIENT_ID_WEB = "add-google-auth-client-id-here"
 GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
