--- a/server/sample.env
+++ b/server/sample.env
@@ -11,5 +11,5 @@ GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
 
 
 ## CHAT
-CHAT_ADMIN_ACCESS_TOKEN = "matrix-admin-access-token"
+CHAT_ACCESS_TOKEN = "matrix-admin-access-token"
 HOMESERVER_URL = "matrix-home-server"
