some PR requests

--- a/server/sample.env
+++ b/server/sample.env
@@ -12,5 +12,10 @@ GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
 
 ## CHAT
 CHAT_ACCESS_TOKEN = "matrix-admin-access-token"
-HOMESERVER_URL = "matrix-home-server"
+CHAT_HOMESERVER_URL = "matrix-home-server"
+
+## GITHUB
+GITHUB_SECRET_ID = ""
+GITHUB_SCHOOL_ID = ""
+GITHUB_BASE_URL = ""
 
