Enrolled courses fetching from display service

--- a/server/sample.env
+++ b/server/sample.env
@@ -9,7 +9,6 @@ AUTH_JWT_SECRET = "some-difficult-guess-secret"
 GOOGLE_AUTH_CLIENT_ID_WEB = "add-google-auth-client-id-here"
 GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
 
-
 ## CHAT
 CHAT_ACCESS_TOKEN = "matrix-admin-access-token"
 CHAT_HOMESERVER_URL = "matrix-home-server"
@@ -19,3 +18,6 @@ GITHUB_SECRET_ID = ""
 GITHUB_SCHOOL_ID = ""
 GITHUB_BASE_URL = ""
 
+## SEEDING COURSE
+SEED_URL = 'http://localhost:5000'
+COURSE_SEEDING_ENDPOINT = 'courses-QH2hh8Ntynz5fyTv'
