--- a/server/sample.env
+++ b/server/sample.env
@@ -1,3 +1,6 @@
+NODE_ENV = "staging"
+PORT = "5000"
+
 ## DB Connection
 DB_NAME = "postgres"
 DB_HOST = "localhost"
@@ -17,7 +20,3 @@ CHAT_HOMESERVER_URL = "matrix-home-server"
 GITHUB_SECRET_ID = ""
 GITHUB_SCHOOL_ID = ""
 GITHUB_BASE_URL = ""
-
-## SEEDING COURSE
-SEED_URL = 'http://localhost:5000'
-COURSE_SEEDING_ENDPOINT = 'courses-QH2hh8Ntynz5fyTv'
