--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "hpal": "2.x.x",
     "hpal-debug": "1.x.x",
     "nodemon": "^2.0.4",
+    "pathfinder-ui": "^1.0.3",
     "prettier": "^2.0.5",
     "prettier-eslint": "^11.0.0"
   },
