--- a/server/sample.env
+++ b/server/sample.env
@@ -1,11 +1,17 @@
 NODE_ENV = "staging"
-PORT = "5000"
+SEED_PORT = "2983"
 
 ## DB Connection
 DB_NAME = "postgres"
 DB_HOST = "localhost"
 DB_USER = "postgres"
 DB_PASS = "hello"
+
+## Bol DB Connection
+BOL_DB_NAME = "-bol-db-name"
+BOL_DB_HOST = "-bol-host-"
+BOL_DB_USER = "-bol-user-"
+BOL_DB_PASS = "-bol-password-"
 
 ## Authentication
 AUTH_JWT_SECRET = "some-difficult-guess-secret"
