--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@hapi/joi": "17.x.x",
     "@hapi/vision": "^6.0.0",
     "avocat": "^2.0.0",
+    "aws-sdk": "^2.766.0",
     "axios": "^0.20.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
@@ -33,6 +34,7 @@
     "dotenv": "8.x.x",
     "fs-extra": "^9.0.1",
     "google-auth-library": "^6.0.6",
+    "googleapis": "^61.0.0",
     "handlebars": "^4.7.6",
     "hapi-auth-jwt2": "^10.1.0",
     "hapi-swagger": "^13.0.2",
