--- a/server/sample.env
+++ b/server/sample.env
@@ -40,3 +40,5 @@ GITHUB_BASE_URL = ""
 MERAKI_AUTH_CLIENT_ID = ""
 MERAKI_AUTH_CLIENT_SECRET = ""
 MERAKI_AUTH_REFRESH_TOKEN = ""
+CHAT_MERAKI_USER_ID = "@meraki-dbg-bot:navgurukul.org"
+
