Cron jobs for upcoming classes

--- a/server/sample.env
+++ b/server/sample.env
@@ -26,6 +26,8 @@ GOOGLE_AUTH_CLIENT_ID_ANDROID = "add-google-auth-client-id-here"
 S3_SECRET_ACCESS_KEY = ""
 S3_SECRET_KEY_ID = ""
 S3_REGION = "ap-south-1"
+S3_BUCKET = 'your-aws-s3-bucketname'
+
 
 ## CHAT
 CHAT_ACCESS_TOKEN = "matrix-admin-access-token"
