--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "lodash": "^4.17.20",
     "marked": "^1.1.1",
     "matrix-bot-sdk": "^0.5.7",
+    "node-cron": "^2.0.3",
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
