--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "axios": "^0.20.0",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
+    "bluebird": "^3.7.2",
     "confidence": "4.x.x",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.3.0",
