--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@hapi/vision": "^6.0.0",
     "avocat": "^2.0.0",
     "aws-sdk": "^2.766.0",
-    "axios": "^0.20.0",
+    "axios": ">=0.21.1",
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.7.2",
@@ -44,7 +44,7 @@
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
     "lodash": "^4.17.20",
-    "marked": "^1.1.1",
+    "marked": ">=2.0.0",
     "matrix-bot-sdk": "^0.5.7",
     "node-cron": "^2.0.3",
     "objection": "^2.2.1",
