--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "dateformat": "^4.5.1",
     "dotenv": "8.x.x",
     "fs-extra": "^9.0.1",
+    "glob": "^7.1.7",
     "google-auth-library": "^6.0.6",
     "googleapis": "^61.0.0",
     "handlebars": "^4.7.6",
