--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "random-animal-name-generator": "^0.1.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
+    "showdown": "^1.9.1",
     "toys": "2.x.x"
   },
   "devDependencies": {
