--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.7.2",
     "confidence": "4.x.x",
+    "config": "^3.3.6",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.3.0",
     "dateformat": "^4.5.1",
@@ -59,7 +60,9 @@
     "random-animal-name-generator": "^0.1.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
-    "toys": "2.x.x"
+    "toys": "2.x.x",
+    "winston": "^3.3.3",
+    "winston-daily-rotate-file": "^4.5.5"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
