--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "random-animal-name-generator": "^0.1.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
+    "showdown": "^1.9.1",
     "toys": "2.x.x",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
