upload partner group data

--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "config": "^3.3.6",
     "crypto": "^1.0.1",
     "crypto-random-string": "^3.3.0",
+    "csv-parser": "^3.0.0",
     "dateformat": "^4.5.1",
     "dotenv": "8.x.x",
     "fs-extra": "^9.0.1",
