--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "babel-cli": "^6.26.0",
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.7.2",
+    "chance": "^1.1.8",
     "confidence": "4.x.x",
     "config": "^3.3.6",
     "crypto": "^1.0.1",
