--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@hapi/joi": "17.x.x",
     "@hapi/vision": "^6.0.0",
     "@joi/date": "^2.1.0",
+    "@nativedocuments/docx-wasm": "^2.2.13-1561490777",
     "avocat": "^2.0.0",
     "aws-sdk": "^2.766.0",
     "axios": ">=0.21.1",
@@ -38,6 +39,7 @@
     "crypto-random-string": "^3.3.0",
     "csv-parser": "^3.0.0",
     "dateformat": "^4.5.1",
+    "docxtemplater": "^3.31.2",
     "dotenv": "8.x.x",
     "fs-extra": "^9.0.1",
     "glob": "^7.1.7",
@@ -59,6 +61,7 @@
     "objection": "^2.2.1",
     "objection-db-errors": "^1.1.2",
     "pg": "^8.3.0",
+    "pizzip": "^3.1.1",
     "random-animal-name-generator": "^0.1.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
