--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "hoek": "^6.1.3",
     "jsonwebtoken": "^8.5.1",
     "knex": "^0.21.2",
+    "libreoffice-convert": "^1.4.1",
     "lodash": "^4.17.20",
     "marked": ">=2.0.0",
     "matrix-bot-sdk": "^0.5.7",
