--- a/package.json
+++ b/package.json
@@ -65,6 +65,7 @@
     "pg": "^8.3.0",
     "pizzip": "^3.1.3",
     "random-animal-name-generator": "^0.1.1",
+    "redis": "^4.3.1",
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
     "showdown": "^1.9.1",
