--- a/package.json
+++ b/package.json
@@ -70,6 +70,7 @@
     "schwifty": "^5.3.0",
     "showdown": "^1.9.1",
     "toys": "2.x.x",
+    "uuid": "^9.0.0",
     "winston": "^3.3.3",
     "winston-daily-rotate-file": "^4.5.5"
   },
