--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "schmervice": "^1.5.0",
     "schwifty": "^5.3.0",
     "showdown": "^1.9.1",
+    "strapi-sdk-js": "^2.2.0",
     "toys": "2.x.x",
     "uuid": "^9.0.0",
     "winston": "^3.3.3",
