temp Credentials  for uploading video

--- a/server/sample.env
+++ b/server/sample.env
@@ -28,6 +28,13 @@ S3_SECRET_KEY_ID = ""
 S3_REGION = "ap-south-1"
 S3_BUCKET = 'your-aws-s3-bucketname'
 
+## Create temp credentials for uploading extension video
+MEET_EXTENSION_S3_SECRET_ACCESS_KEY = ""
+MEET_EXTENSION_S3_SECRET_KEY_ID = ""
+# MEET_S3_REGION = "ap-south-1"
+MEET_EXTENSION_BUCKET = "extension-video"
+MEET_EXTENSION_TEMP_CRETENTIALS_ROLE = ""
+
 
 ## CHAT
 CHAT_ACCESS_TOKEN = "matrix-admin-access-token"
