--- a/package.json
+++ b/package.json
@@ -73,7 +73,8 @@
     "toys": "2.x.x",
     "uuid": "^9.0.0",
     "winston": "^3.3.3",
-    "winston-daily-rotate-file": "^4.5.5"
+    "winston-daily-rotate-file": "^4.5.5",
+    "xlsx": "^0.18.5"
   },
   "devDependencies": {
     "@hapi/code": "8.x.x",
