redirect changes in url

--- a/server/sample.env
+++ b/server/sample.env
@@ -50,3 +50,8 @@ MERAKI_AUTH_CLIENT_SECRET = ""
 MERAKI_AUTH_REFRESH_TOKEN = ""
 CHAT_MERAKI_USER_ID = "@meraki-dbg-bot:navgurukul.org"
 
+#partner  redirect link 
+code_folding_mode = 'merd'
+
+#testing token
+TOKEN_AUTH = ""
