add credentials in sample.env

--- a/server/sample.env
+++ b/server/sample.env
@@ -55,3 +55,9 @@ code_folding_mode = 'merd'
 
 #testing token
 TOKEN_AUTH = ""
+
+
+#C4CA Bucket Credentials
+C4CA_BUCKET = ""
+C4CA_ACCESS_KEY_ID = ""
+C4CA_SECRET_ACCESS_KEY = ""
