--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -1,5 +1,8 @@
 name: Cypress Tests
-on: [push]
+on:
+  push:
+    branches:
+      - cypress_testing
 jobs:
   cypress-run:
     runs-on: ubuntu-latest
@@ -12,7 +15,7 @@ jobs:
     #     containers: [1, 2] # Uses 2 parallel instances
     steps:
       - name: Checkout
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v6
