--- a/.github/workflows/cypress.yml
+++ b/.github/workflows/cypress.yml
@@ -9,9 +9,10 @@ jobs:
     # Runs tests in parallel with matrix strategy https://docs.cypress.io/guides/guides/parallelization
     # https://docs.github.com/en/actions/using-jobs/using-a-matrix-for-your-jobs
     # Also see warning here https://github.com/cypress-io/github-action#parallel
-    # strategy:
+    strategy:
     #   fail-fast: false # https://github.com/cypress-io/github-action/issues/48
-    #   matrix:
+      matrix:
+        node: [14]
     #     containers: [1, 2] # Uses 2 parallel instances
     steps:
       - name: Checkout
@@ -19,14 +20,14 @@ jobs:
       - name: Cypress run
         # Uses the official Cypress GitHub action https://github.com/cypress-io/github-action
         uses: cypress-io/github-action@v6
-        # with:
+        with:
         #   # Starts web server for E2E tests - replace with your own server invocation
         #   # https://docs.cypress.io/guides/continuous-integration/introduction#Boot-your-server
         #   start: npm start
         #   wait-on: 'http://localhost:3000' # Waits for above
         #   # Records to Cypress Cloud 
         #   # https://docs.cypress.io/guides/cloud/projects#Set-up-a-project-to-record
-        #   record: true
+          record: true
         #   parallel: true # Runs test in parallel using settings above
         env:
           # For recording and parallelization to work you must set your CYPRESS_RECORD_KEY
