Revert "Merge pull request #1520 from navgurukul/xdup/main"
This reverts commit 33064635015d229856b4735c4614049bb43e1f09, reversing
changes made to d11b48fe480565ba8f7c03ee6bbb5bb7c9c64277.

--- a/package.json
+++ b/package.json
@@ -79,7 +79,7 @@
     "@hapi/code": "8.x.x",
     "@hapi/eslint-config-hapi": "13.x.x",
     "@hapi/eslint-plugin-hapi": "4.x.x",
-    "@hapi/lab": "^22.0.5",
+    "@hapi/lab": "22.x.x",
     "babel-eslint": "10.x.x",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
