--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "babel-preset-es2015": "^6.24.1",
     "bluebird": "^3.7.2",
     "chance": "^1.1.8",
+    "cheerio": "^1.0.0-rc.12",
     "confidence": "4.x.x",
     "config": "^3.3.6",
     "crypto": "^1.0.1",
